# Dictionary

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  dictionary.cpp  file_manager.cpp  reader.cpp  writer.cpp
src/include/: dictionary.h  file_manager.h  reader.h  timer.h  writer.h
src/test/: dictionary_test.cpp  generate_test_files.py
src/test/testfiles/: expected_out.txt
